--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,20 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*":[
+        "src/*"
+      ],
+      "@/components":[
+        "src/componets/*"
+      ],
+      "@/icons":[
+        "src/icons/*"
+      ],
+      "@/lib":[
+        "src/lib/*"
+      ]
+    }
+  } 
 }
